// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderActionIcons Tests should render default right position 1`] = `
Array [
  Object {
    "cfg": Object {
      "x": 37,
      "y": 24.5,
    },
  },
  Object {
    "cfg": Object {
      "x": 186,
      "y": 9.5,
    },
  },
  Object {
    "cfg": Object {
      "x": 186,
      "y": 39.5,
    },
  },
]
`;

exports[`HeaderActionIcons Tests should render multiple custom position 1`] = `
Array [
  Array [
    Object {
      "x": 9,
      "y": 24.5,
    },
    Object {
      "x": 51,
      "y": 24.5,
    },
  ],
  Array [
    Object {
      "x": 158,
      "y": 9.5,
    },
    Object {
      "x": 200,
      "y": 9.5,
    },
  ],
  Array [
    Object {
      "x": 158,
      "y": 39.5,
    },
    Object {
      "x": 200,
      "y": 39.5,
    },
  ],
]
`;
